--- a/index.css
+++ b/index.css
@@ -233,13 +233,13 @@ footer h2 {
     top: 110vw;
   }
 
-  .footer * {
+  footer * {
     transform: scale(3.5);
    
   }
 
-  .footer h2 {
-    
+  footer h2 {
+    top: -15vw;
     position: relative;
     text-align: center;
   }
